<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:contentPaddingBottom="-20dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    tools:context="org.techteam.bashhappens.gui.fragments.PostsListFragment" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <TextView
            android:id="@+id/post_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/post_header" />

        <ImageButton
            android:id="@+id/overflow_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="-7dp"
            android:layout_marginRight="-8dp"
            android:layout_marginEnd="-8dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/ic_action_overflow"
            android:background="@android:color/transparent"
            android:contentDescription="@string/open_context_menu" />

        <TextView
            android:id="@+id/post_date"
            android:layout_toLeftOf="@id/overflow_button"
            android:layout_toStartOf="@id/overflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/post_header" />

        <TextView
            android:id="@+id/post_text"
            android:layout_below="@id/post_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/hr"
            android:layout_width="fill_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_below="@id/post_text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hr"
            android:orientation="horizontal"
            style="@android:style/Theme.Holo.Light.Panel" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/post_dislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:src="@drawable/ic_action_bad"
                    android:contentDescription="@string/post_dislike" />

                <TextView
                    android:id="@+id/post_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/post_header"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

                <ImageButton
                    android:id="@+id/post_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:src="@drawable/ic_action_good"
                    android:contentDescription="@string/post_like" />
                </LinearLayout>

            <Button
                android:id="@+id/post_bayan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="[:||||:]" />

            <ImageButton
                android:id="@+id/post_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                style="?android:attr/buttonBarButtonStyle"
                android:src="@drawable/ic_action_share"
                android:contentDescription="@string/post_share" />

            <ImageButton
                android:id="@+id/post_fav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:src="@drawable/ic_action_not_important"
                android:contentDescription="@string/post_fav" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>